--- a/fontbot.cabal
+++ b/fontbot.cabal
@@ -17,6 +17,12 @@ library
   hs-source-dirs:      src
   exposed-modules:     Lib
   build-depends:       base >= 4.7 && < 5
+                     , http-client
+                     , http-conduit
+                     , bytestring
+                     , http-client-tls
+                     , aeson
+                     , yaml
   default-language:    Haskell2010
 
 executable fontbot-exe
