--- a/fontbot.cabal
+++ b/fontbot.cabal
@@ -1,6 +1,6 @@
 name:                fontbot
-version:             0.1.0.0
-synopsis:            Initial project template from stack
+version:             0.1.0.1
+synopsis:            Choose word, choose font, tweet.
 description:         Please see README.md
 homepage:            https://github.com/piotrjustyna/fontbot#readme
 license:             BSD3
@@ -16,13 +16,12 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Lib
+                     , TwitterUtilities
   build-depends:       base >= 4.7 && < 5
-                     , http-client
-                     , http-conduit
                      , bytestring
-                     , http-client-tls
-                     , aeson
                      , yaml
+                     , twitter-conduit
+                     , text
   default-language:    Haskell2010
 
 executable fontbot-exe
