Rendering text to image.

--- a/fontbot.cabal
+++ b/fontbot.cabal
@@ -24,6 +24,9 @@ library
                      , text
                      , lens
                      , twitter-types
+                     , Rasterific
+                     , JuicyPixels
+                     , FontyFruity
   default-language:    Haskell2010
 
 executable fontbot-exe
