--- a/fontbot.cabal
+++ b/fontbot.cabal
@@ -27,6 +27,7 @@ library
                      , Rasterific
                      , JuicyPixels
                      , FontyFruity
+                     , regex-posix
   default-language:    Haskell2010
 
 executable fontbot-exe
