--- a/fontbot.cabal
+++ b/fontbot.cabal
@@ -1,5 +1,5 @@
 name:                fontbot
-version:             0.9.0.1
+version:             1.0.0.0
 synopsis:            Choose word, choose font, tweet.
 description:         Please see README.md
 homepage:            https://github.com/piotrjustyna/fontbot#readme
@@ -31,6 +31,7 @@ library
                      , string-conv
                      , directory
                      , random
+                     , MissingH
   default-language:    Haskell2010
 
 executable fontbot-exe
